# polymarket-claimer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/apps/claimer/: __main__.py  process.py
src/infrastructure/notifications/: telegram.py
src/infrastructure/polymarket/: relayer_client.py
src/shared/: logging.py  settings.py
tests/: test_claimer.py
