[project]
name = "polymarket-claimer"
version = "0.1.0"
description = "Automated Polymarket position redeemer with pending deposit confirmation"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "py-clob-client>=0.34.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0",
    "eth-utils>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
